Fixed language in documentation of 'Getting Started' section in Jupyter Notebook

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -7,14 +7,14 @@
     "# Welcome to Scheduler!\n",
     "\n",
     "### Getting started\n",
-    "To begin please choose a method for loading data. Option A lets you load an excel spreadsheet with your own data. Option B loads some sample data for you to see the process."
+    "To begin, please choose a way you'd like to input your data. The first option allows you to load an excel spreadsheet with your own data. The second option loads some sample data for you to see the process and understand how the scheduling system works.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we ought to get into the correct directory:"
+    "Run the command below to ensure we are in the correct directory:"
    ]
   },
   {
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\James\\Documents\\GitHub\\Scheduler\\scheduler\n"
+      "C:\\Users\\dolly\\Scheduler\\scheduler\n"
      ]
     }
    ],
@@ -38,22 +38,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In case you haven't installed the pandas or xlrd packages, the next cell will install them:"
+    "Run the command below to ensure we have the necessary packages needed to run our scheduler (pandas and xlrd):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (0.25.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2.8.0)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2019.2)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "'pip3' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n",
-      "'pip3' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
+      "WARNING: You are using pip version 19.2.3, however version 19.3.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: xlrd in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (1.2.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 19.2.3, however version 19.3.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
@@ -66,9 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option A\n",
-    "\n",
-    "*So let's cut the A and B options and just use A!*\n",
+    "### Loading an Excel Spreadsheet\n",
     "\n",
     "Here we will be loading from the excel file 'my_data.xl' which you can download, edit with spreadsheet software and reupload here. When you have done this please run the cell below. "
    ]
@@ -715,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
