Fixed language in documentation of 'Loading from Excel Sheet' section in Jupyter Notebook

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -54,8 +54,8 @@
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (0.25.1)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2.8.0)\n",
-      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2019.2)\n",
       "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2019.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n"
      ]
     },
@@ -94,12 +94,12 @@
    "source": [
     "### Loading an Excel Spreadsheet\n",
     "\n",
-    "Here we will be loading from the excel file 'my_data.xl' which you can download, edit with spreadsheet software and reupload here. When you have done this please run the cell below. "
+    "This is the first option, where you can load an excel sheet that contains your data. In this example, we will be loading from the excel file 'my_data.xl'. You can download, edit and update the excel sheet to reflect your data and reupload here. When this is done, run the cell below to properly load your data into the scheduling system!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,12 +162,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before continuing you may check that the courses, professors and classrooms listed below are correct."
+    "Before continuing, you can run the commands below to ensure the professors, classrooms and courses you inputted are correct:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
