Fixed some language in documentation of 'Loading Sample Data' section

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -14,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the command below to ensure we are in the correct directory:"
+    "Run the command (shift+enter) below to ensure we are in the correct directory:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -228,14 +228,14 @@
      "output_type": "stream",
      "text": [
       "physics\n",
-      "astrophysics\n",
-      "calculus 1\n",
-      "calculus 4\n",
+      "chemistry\n",
+      "biochemistry\n",
       "biology 1\n",
       "biology 2\n",
       "molecular biology\n",
-      "biochemistry\n",
-      "chemistry\n"
+      "calculus 1\n",
+      "calculus 4\n",
+      "astrophysics\n"
      ]
     }
    ],
@@ -247,13 +247,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option B\n",
-    "Run the cell below (shift + enter) to create the sample data we need. This will take data from datamaker.py (which is the file  where you can add/edit/remove classes, teachers, classrooms; and exports that data into a file called sample_data.txt to be used."
+    "### Loading Sample Data\n",
+    "This is the second option, where sample data is loaded instead of an Excel spreadsheet being used to retrieve data. \n",
+    "Running the command below will generate the sample data. This will take data from a python file in which you can edit courses, teachers and classrooms, called 'datamaker.py' and export that generated data into a text file called 'sample_data.txt'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,12 +268,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we load the created data into our program (run the cell below)"
+    "Now, we can run the command below to load the sample data to our program:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
