Finished adding documentation to notebook section called 'Loading Sample Data'

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -53,9 +53,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (0.25.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2.8.0)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2019.2)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2.8.0)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n"
      ]
     },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,14 +228,14 @@
      "output_type": "stream",
      "text": [
       "physics\n",
-      "chemistry\n",
-      "biochemistry\n",
+      "astrophysics\n",
+      "calculus 1\n",
+      "calculus 4\n",
       "biology 1\n",
       "biology 2\n",
       "molecular biology\n",
-      "calculus 1\n",
-      "calculus 4\n",
-      "astrophysics\n"
+      "biochemistry\n",
+      "chemistry\n"
      ]
     }
    ],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,14 +295,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data is ready to use. \n",
-    "\n",
-    "Running the cell below shows us a list of available professors"
+    "Before continuing, you can run the commands below to ensure the professors, classrooms and courses are correct:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -332,17 +330,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Similarly, run the cell below to see a list of rooms"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -362,13 +353,6 @@
    ],
    "source": [
     "print('\\n'.join(rooms))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And finally do the same for the list of courses"
    ]
   },
   {
@@ -400,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scheduler program will take the courses shown above and find a professor, classroom and time for them."
+    "The scheduler program will now take the courses shown above and find a professor, classroom and time that works."
    ]
   },
   {
