Finished documentation in notebook

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -54,8 +54,8 @@
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (0.25.1)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2019.2)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2.8.0)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n"
      ]
     },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -398,12 +398,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the following two cells"
+    "The following two cells will import necessary classes and format the data accordingly so that we can compute the class schedule:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,12 +429,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we are ready to compute the class schedule and display it below\n"
+    "With the code block below, we can compute the class schedule."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -480,8 +480,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the command below to display the class schedule in order of day of week, course name, professor, the room and the time."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -516,69 +523,61 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>mon</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Mike Williams</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>12:00 to 13:30</td>\n",
+       "      <td>physics</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>16:00 to 17:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>mon</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Elizabeth Walker</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>11:00 to 12:00</td>\n",
+       "      <td>biochemistry</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>201</td>\n",
+       "      <td>13:30 to 15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>biology 1</td>\n",
+       "      <td>Peter Parker</td>\n",
        "      <td>115b</td>\n",
-       "      <td>17:30 to 18:30</td>\n",
+       "      <td>13:30 to 15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>tues</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Elizabeth Walker</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>17:00 to 18:00</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>biology 2</td>\n",
+       "      <td>Rachel Smith</td>\n",
+       "      <td>433</td>\n",
+       "      <td>11:30 to 12:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>tues</td>\n",
-       "      <td>calculus 4</td>\n",
+       "      <td>biology 2</td>\n",
        "      <td>Rachel Smith</td>\n",
-       "      <td>201</td>\n",
-       "      <td>09:30 to 10:30</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>17:30 to 18:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>wed</td>\n",
        "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>09:00 to 10:00</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>115a</td>\n",
+       "      <td>11:00 to 12:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
        "      <td>wed</td>\n",
-       "      <td>chemistry</td>\n",
+       "      <td>biochemistry</td>\n",
        "      <td>Peter Parker</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>12:00 to 13:30</td>\n",
+       "      <td>433</td>\n",
+       "      <td>12:30 to 14:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>wed</td>\n",
-       "      <td>biochemistry</td>\n",
-       "      <td>Gregg Woods</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>16:30 to 18:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
        "      <td>wed</td>\n",
        "      <td>biology 2</td>\n",
        "      <td>Rachel Smith</td>\n",
@@ -586,110 +585,73 @@
        "      <td>10:00 to 11:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <td>8</td>\n",
        "      <td>wed</td>\n",
        "      <td>molecular biology</td>\n",
        "      <td>Peter Parker</td>\n",
        "      <td>115a</td>\n",
-       "      <td>08:30 to 09:30</td>\n",
+       "      <td>10:30 to 11:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>thur</td>\n",
+       "      <td>biology 1</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>13:00 to 14:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>wed</td>\n",
-       "      <td>astrophysics</td>\n",
-       "      <td>Chu Yen</td>\n",
-       "      <td>655</td>\n",
-       "      <td>12:00 to 13:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
        "      <td>thur</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>745b</td>\n",
+       "      <td>calculus 4</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>666</td>\n",
        "      <td>14:30 to 15:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>physics</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>16:00 to 17:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>12</td>\n",
-       "      <td>thur</td>\n",
-       "      <td>chemistry</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>655</td>\n",
-       "      <td>13:30 to 15:00</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>biology 2</td>\n",
+       "      <td>Rachel Smith</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>10:30 to 11:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>13</td>\n",
-       "      <td>thur</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>201</td>\n",
-       "      <td>17:00 to 18:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>thur</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Elizabeth Walker</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>09:00 to 10:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>biochemistry</td>\n",
-       "      <td>Gregg Woods</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>09:30 to 11:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>16</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Mike Williams</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>12:00 to 13:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>17</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>433</td>\n",
-       "      <td>12:30 to 13:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>18</td>\n",
        "      <td>fri</td>\n",
        "      <td>calculus 4</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>201</td>\n",
-       "      <td>09:00 to 10:00</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>655</td>\n",
+       "      <td>14:00 to 15:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Day             Course         Professor  Room          Period\n",
-       "0    mon          biology 1     Mike Williams  745b  12:00 to 13:30\n",
-       "1    mon         calculus 1  Elizabeth Walker  745b  11:00 to 12:00\n",
-       "2   tues            physics  Brian K. Dickson  115b  17:30 to 18:30\n",
-       "3   tues         calculus 1  Elizabeth Walker  115b  17:00 to 18:00\n",
-       "4   tues         calculus 4      Rachel Smith   201  09:30 to 10:30\n",
-       "5    wed            physics  Brian K. Dickson  115b  09:00 to 10:00\n",
-       "6    wed          chemistry      Peter Parker  115a  12:00 to 13:30\n",
-       "7    wed       biochemistry       Gregg Woods  745b  16:30 to 18:00\n",
-       "8    wed          biology 2      Rachel Smith  115b  10:00 to 11:00\n",
-       "9    wed  molecular biology      Peter Parker  115a  08:30 to 09:30\n",
-       "10   wed       astrophysics           Chu Yen   655  12:00 to 13:00\n",
-       "11  thur            physics  Brian K. Dickson  745b  14:30 to 15:30\n",
-       "12  thur          chemistry      Peter Parker   655  13:30 to 15:00\n",
-       "13  thur          biology 2      Rachel Smith   201  17:00 to 18:00\n",
-       "14  thur         calculus 1  Elizabeth Walker  115b  09:00 to 10:00\n",
-       "15   fri       biochemistry       Gregg Woods  115a  09:30 to 11:00\n",
-       "16   fri          biology 1     Mike Williams  745b  12:00 to 13:30\n",
-       "17   fri          biology 2      Rachel Smith   433  12:30 to 13:30\n",
-       "18   fri         calculus 4      Rachel Smith   201  09:00 to 10:00"
+       "     Day             Course     Professor  Room          Period\n",
+       "0    mon            physics       Chu Yen  115b  16:00 to 17:00\n",
+       "1    mon       biochemistry  Peter Parker   201  13:30 to 15:00\n",
+       "2    mon          biology 1  Peter Parker  115b  13:30 to 15:00\n",
+       "3    mon          biology 2  Rachel Smith   433  11:30 to 12:30\n",
+       "4   tues          biology 2  Rachel Smith  115b  17:30 to 18:30\n",
+       "5    wed            physics       Chu Yen  115a  11:00 to 12:00\n",
+       "6    wed       biochemistry  Peter Parker   433  12:30 to 14:00\n",
+       "7    wed          biology 2  Rachel Smith  115b  10:00 to 11:00\n",
+       "8    wed  molecular biology  Peter Parker  115a  10:30 to 11:30\n",
+       "9   thur          biology 1  Peter Parker  115b  13:00 to 14:30\n",
+       "10  thur         calculus 4       Chu Yen   666  14:30 to 15:30\n",
+       "11   fri            physics       Chu Yen  745b  16:00 to 17:00\n",
+       "12   fri          biology 2  Rachel Smith  745b  10:30 to 11:30\n",
+       "13   fri         calculus 4       Chu Yen   655  14:00 to 15:00"
       ]
      },
      "metadata": {},
@@ -701,11 +663,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "You're done! Congratulations and thank you for using the Class Scheduler notebook!!"
+   ]
   }
  ],
  "metadata": {
